--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <title>Sword Art Online 開服倒數</title>
     <meta data-n-head="1" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <script src=//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js></script>
 </head>
 <body style="margin: 0;padding: 0;">
     <div id="bg" class="bg">
         <div class="flex-container">
-            <div id="texts" class="flex-item">
-            </div>
+            <div id="texts" class="flex-item"></div>
+        </div>
+        <div class="flex-footer">
+            本網站使用Argus API以獲得即時數據
         </div>
     </div>
     <script src="main.js"></script>
