--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta data-n-head="1" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <script src=//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js></script>
+    <meta name="google-site-verification" content="P_YmsSGLiIfsEDCMUpHw24Ls54V40ZDFClpeP1ZYokU" />
 </head>
 <body style="margin: 0;padding: 0;">
     <div id="bg" class="bg">
