--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Sword Art Online 開服倒數</title>
+    <title>Sword Art Online 倒數</title>
     <meta data-n-head="1" name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://huanying04.github.io/SAOCountdown/">
+    <meta property="og:title" content="Sword Art Online 倒數">
+    <meta property="og:image" content="https://huanying04.github.io/SAOCountdown/img/logo.png">
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:url" content="https://huanying04.github.io/SAOCountdown/">
+    <meta property="twitter:title" content="Sword Art Online 倒數">
+    <meta property="twitter:image" content="https://huanying04.github.io/SAOCountdown/img/logo.png">
+
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta name="google-site-verification" content="P_YmsSGLiIfsEDCMUpHw24Ls54V40ZDFClpeP1ZYokU" />
