--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
             本網站使用Argus API以獲得即時數據
         </div>
     </div>
+    <script src="const.js"></script>
+    <script src="utils.js"></script>
     <script src="main.js"></script>
 </body>
