change font family

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="twitter:title" content="Sword Art Online 倒數">
     <meta property="twitter:image" content="https://huanying04.github.io/SAOCountdown/img/logo.png">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css?u=1">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta name="google-site-verification" content="P_YmsSGLiIfsEDCMUpHw24Ls54V40ZDFClpeP1ZYokU" />
 </head>
